# python-alembic

./: .pylintrc  README.md  buildspec.yml  models.py  pyproject.toml  session.py
alembic/: env.py
alembic/versions/: 037395713044_userとaddressテーブルを追加したよ.py
app/models/: address.py  user.py
