[tool.poetry]
name = "python-alembic"
version = "0.1.0"
description = ""
authors = ["Satoshi Kaneaysu <satoshi.kaneaysu@serverworks.co.jp>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0"
psycopg2-binary = "^2.9"


[tool.poetry.group.dev.dependencies]
alembic = "^1.11.1"
sqlacodegen-v2 = "^0.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
